<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6F6F6F6"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/montserrat"
        android:letterSpacing="0.05"
        android:text="@string/welcome_to_sap"
        android:textAlignment="center"
        android:textColor="@color/darkBlue"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="124dp"
        android:layout_marginTop="93dp"
        app:srcCompat="@mipmap/logo_sap" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/poppins_light"
        android:letterSpacing="0.20"
        android:text="Small Android Project"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <Button
        android:id="@+id/idbtnStart"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/rounded_gradation"
        android:fontFamily="@font/montserrat"
        android:text="START"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:onClick="clickStart"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="85px"
        android:fontFamily="@font/poppins_light"
        android:text="@string/created"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_light"
        android:text="@string/nim"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="12sp" />
</LinearLayout>